fix(ui5-tab): correct overflow identation

--- a/packages/main/src/themes/TabInOverflow.css
+++ b/packages/main/src/themes/TabInOverflow.css
@@ -40,8 +40,13 @@
 }
 
 .ui5-tab-overflow-itemContent-wrapper {
-	padding-inline-start: calc(var(--_ui5-tab-indentation-level) * 0.5rem + var(--_ui5-tab-extra-indent, 0) * var(--_ui5_tc_overflowItem_extraIndent));
+	padding-inline-start: calc(var(--_ui5-tab-indentation-level) * var(--_ui5-tab-indent-multiplier) + var(--_ui5-tab-extra-indent, 0) * var(--_ui5_tc_overflowItem_extraIndent));
 }
+
+.ui5-tab-overflow-item  .ui5-tab-semantic-icon {
+	position: absolute;
+	inset-inline-start: -1.5rem;
+} 
 
 .ui5-tab-overflow-item--selectedSubTab {
 	background-color: var(--sapList_SelectionBackgroundColor);
